--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,13 @@
 body {
     background-color: #0e0e0e;
-    overflow-y: hidden;
+    overflow-x: hidden;
     color: #fff;
     font-family: "Raleway", "sans-serif";
 }
 
 div#content {
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 100vh;
 
     display: flex;
