--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,13 @@
 body {
     background-color: #0e0e0e;
-    overflow-x: hidden;
     color: #fff;
     font-family: "Raleway", "sans-serif";
 }
 
 div#content {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    height: 100vh;
+    position: relative;
+    margin: 100px 0;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
