removed animeJS animations

--- a/src/app/scss/index.scss
+++ b/src/app/scss/index.scss
@@ -14,7 +14,7 @@ div#content {
 
     display: flex;
     flex-direction: column;
-    // justify-content: center;
+    justify-content: center;
     align-items: center;
 }
 
